--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div>
+<div class="container">
 	<p>Hi! This is Autbot, an AI chatbot to help children with Autism learn how to better socialize and improve their English language skills.</p>
 </div>
 
