--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1,
 			shrink-to-fit=no">
-		<meta name="description" content="Get personalized recommendations for all
-			your favourite OTT platforms.">
-		<meta name="author" content="Ishani Kathuria">
+		<meta name="description" content="Chatbot for children with Autism.">
+		<meta name="author" content="Ishani Kathuria, Kamad Saxena">
 
 		<!-- favicon and title -->
 		<link rel="icon" href="{{ url_for('static', filename='icon.png') }}">
@@ -38,7 +37,7 @@
 	<body>
 
 		<!-- nav -->
-		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		<nav id="main-nav" class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#"><i class="fa-solid fa-robot"></i></a>
 
@@ -70,28 +69,7 @@
 			<h1 class="display-1 text-center">{% block title %}{% endblock %}</h1>
 		</div>
 
-		<div class="container" style="min-height: 100vh;">
-			{% block content %}{% endblock %}
-		</div>
-
-		<footer class="container text-center">
-			<p>Author: Ishani Kathuria</p>
-			<p>
-				||
-				<a href="https://linkedin.com/in/ishani-kathuria/" target="_blank">
-					LinkedIn
-				</a>
-				||
-				<a href="https://github.com/ikathuria" target="_blank">
-					GitHub
-				</a>
-				||
-				<a href="https://medium.com/@ishani-kathuria" target="_blank">
-					Medium
-				</a>
-				||
-			</p>
-		</footer>
+		{% block content %}{% endblock %}
 
 		{% block scripts %}{% endblock %}
 
